--- a/package.json
+++ b/package.json
@@ -1,12 +1,16 @@
 {
   "name": "dexarrollate-backend",
-  "private": true,
   "version": "0.1.0",
+  "private": true,
   "description": "A Strapi application",
+  "license": "MIT",
+  "author": {
+    "name": "A Strapi developer"
+  },
   "scripts": {
+    "build": "strapi build",
     "develop": "strapi develop",
     "start": "strapi start",
-    "build": "strapi build",
     "strapi": "strapi"
   },
   "dependencies": {
@@ -23,15 +27,11 @@
     "strapi-connector-mongoose": "^3.6.11",
     "styled-components": "5.3.3"
   },
-  "author": {
-    "name": "A Strapi developer"
+  "engines": {
+    "node": "14.21.3",
+    "npm": ">=6.0.0"
   },
   "strapi": {
     "uuid": "4565baf5-a2db-4613-bdb7-a256df07a500"
-  },
-  "engines": {
-    "node": ">=18.0.0 <=20.x.x",
-    "npm": ">=6.0.0"
-  },
-  "license": "MIT"
+  }
 }
