--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "styled-components": "5.3.3"
   },
   "engines": {
-    "node": "14.21.3",
+    "node": ">=18.0.0 <=20.x.x",
     "npm": ">=6.0.0"
   },
   "strapi": {
